# snap-tui

./: Cargo.toml  Dockerfile  README.md  ui.rs
src/: input.rs  main.rs  snapcast.rs
src/ui/: footer.rs  header.rs  mod.rs  tabs.rs
src/ui/clients/: details.rs  list.rs  mod.rs
src/ui/groups/: details.rs  list.rs  mod.rs
src/ui/streams/: details.rs  list.rs  mod.rs
