[package]
name = "snap-tui"
version = "1.0.0"
edition = "2024"

[dependencies]
ratatui = "0.26.1"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.21.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4.0", features = ["derive"] }
futures = "0.3"
crossterm = "0.27.0"
uuid = { version = "1.7", features = ["v4"] }